--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "optical shoppe",
+  "name": "optical-shoppe",
   "version": "0.0.2",
   "description": "optical shoppe website, test project for gatorworks by seth gore",
   "main": "gruntfile.js",
@@ -26,7 +26,8 @@
     "grunt-contrib-concat": "^0.3.0",
     "grunt-shell": "^0.6.4",
     "grunt-contrib-sass": "^0.7.2",
-    "grunt-exec": "^0.4.5"
+    "grunt-exec": "^0.4.5",
+    "grunt-new": "0.0.0"
   },
   "repository": {
     "type": "git",
