--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,13 @@
-<IfModule mod_rewrite.c>
-	RewriteEngine On
+# Use PHP 5.3
+# AddType application/x-httpd-php53 .php
 
-	# Send would-be 404 requests to Craft
-	RewriteCond %{REQUEST_FILENAME} !-f
-	RewriteCond %{REQUEST_FILENAME} !-d
-	RewriteCond %{REQUEST_URI} !^/(favicon\.ico|apple-touch-icon.*\.png)$ [NC]
-	RewriteRule (.+) /index.php?p=$1 [QSA,L]
+<IfModule mod_rewrite.c>
+
+    RewriteEngine On
+
+    # Send would-be 404 requests to Craft
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} !^/(favicon\.ico|apple-touch-icon.*\.png)$ [NC]
+    RewriteRule (.+) /index.php?p=$1 [QSA,L]
 </IfModule>
