--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "grunt-contrib-sass": "^0.7.2",
     "grunt-exec": "^0.4.5",
     "grunt-new": "0.0.0",
-    "grunt-autoprefixer": "^0.7.2"
+    "grunt-autoprefixer": "^0.7.2",
+    "grunt-gh-pages": "^0.9.1",
+    "grunt-contrib-rename": "0.0.3",
+    "grunt-rename": "^0.1.3"
   },
   "repository": {
     "type": "git",
