--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "grunt-autoprefixer": "^0.7.2",
     "grunt-gh-pages": "^0.9.1",
     "grunt-contrib-rename": "0.0.3",
-    "grunt-rename": "^0.1.3"
+    "grunt-rename": "^0.1.3",
+    "grunt-browser-sync": "^0.7.4",
+    "browser-sync": "^0.7.4"
   },
   "repository": {
     "type": "git",
